--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Set up Go 1.22
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22    #added this because of continuos CI failure due to version mismatch
+
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
