--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Go 1.22
+    - name: Set up Go 1.22 version
       uses: actions/setup-go@v2
       with:
         go-version: 1.22
